--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2c3e50;
+    background-color: #000;
     padding: 1rem;
 }
 
@@ -59,7 +59,7 @@ body {
 }
 
 .navbar a:hover {
-    color: #3498db;
+    color: #4eabe8;
 }
 
 .header {
@@ -106,14 +106,14 @@ body {
     background-color: #fff;
     padding: 2rem;
     border-radius: 8px;
-    border: 1px solid #2c3e50;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
 }
 
 .grid-item:hover {
     transform: translateY(-2px);
-    box-shadow: 0 3px 10px #2c3e50;
+    box-shadow: 0 2px 10px #7f7f7f;
+    border: none;
 }
 
 .grid-item img {
@@ -133,7 +133,7 @@ body {
 }
 
 .footer {
-    background-color: #2c3e50;
+    background-color: #000;
     color: #f5f5f5;
     text-align: center;
     padding: 1rem 0;
