--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,8 @@ form button:hover {
 }
 
 
+
+
 /* Signup styling */
 .signup {
     padding: 2rem;
@@ -367,14 +369,100 @@ form button:hover {
     background-color: #2573a6;
 }
 
-.signup-form a {
+#login-container {
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.login-link {
+    background-color: #fff;
+    color: #2980b9;
+    border: 1px solid #2980b9;
+    padding: 0.3rem 0.6rem;
+    border-radius: 5px;
     text-decoration: none;
-    font-size: 0.8rem;
-    margin-left: 0.3rem;
+    transition: background-color 0.3s, color 0.3s;
+    display: inline-block;
+}
+
+.login-link:hover {
+    background-color: #2980b9;
+    color: #fff;
+}
+
+
+
+
+/* Login styling */
+.login {
+    padding: 2rem;
+    background-color: #f9f9f9;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-container {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 100%;
+}
+
+.login-form h2 {
+    margin-bottom: 1rem;
+    color: #1a1a1d;
+}
+
+.login-form label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
     color: #333;
 }
 
-.signup-form a:hover {
-    color: #2980b9;
+.login-form input {
+    width: 100%;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
+.login-form button {
+    background-color: #2980b9;
+    color: #fff;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.login-form button:hover {
+    background-color: #2573a6;
+}
+
+#signup-container {
+    text-align: center;
+    margin-top: 1rem;
+}
+
+.signup-link {
+    background-color: #fff;
+    color: #2980b9;
+    border: 1px solid #2980b9;
+    padding: 0.3rem 0.6rem;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s, color 0.3s;
+    display: inline-block;
+}
+
+.signup-link:hover {
+    background-color: #2980b9;
+    color: #fff;
+}
