--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
 /* HomePage Styling */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3498db;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -88,7 +100,7 @@ body {
 }
 
 .header h1 {
-    margin: 0;
+    margin-top: 1rem;
     font-size: 3rem;
     font-weight: 700;
 }
@@ -117,8 +129,8 @@ body {
 }
 
 .box {
+    margin: 2rem 0;
     background-color: #fff;
-    padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     flex: 1;
